# Thesis

./: AABB.h  CMakeLists.txt  Collision.cpp  Collision.h  Constants.h  Dockerfile  DynamicBody.cpp  DynamicBody.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  LevelBuilder.cpp  LevelBuilder.h  Math.cpp  Math.h  README.md  RenderWindow.cpp  RenderWindow.h  SdlGameTesi.vcxproj  SdlGameTesi.vcxproj.filters  StaticBody.cpp  StaticBody.h  TextureManager.cpp  TextureManager.h  Utils.h  Vector2.h  World.cpp  World.h  main.cpp  timeUtils.h
x64/Debug/: vc143.idb
x64/Debug/SdlGameTesi.tlog/: CL.command.1.tlog  CL.write.1.tlog  SdlGameTesi.lastbuildstate
x64/Release/: CodeAnalysisResultManifest.txt  Collision.nativecodeanalysis.sarif  Collision.nativecodeanalysis.xml  DynamicBody.nativecodeanalysis.sarif  DynamicBody.nativecodeanalysis.xml  Game.nativecodeanalysis.sarif  Game.nativecodeanalysis.xml  GameObject.nativecodeanalysis.sarif  GameObject.nativecodeanalysis.xml  Graphics.nativecodeanalysis.sarif  Graphics.nativecodeanalysis.xml  Math.nativecodeanalysis.sarif  Math.nativecodeanalysis.xml  SdlGameTesi.exe.recipe  SdlGameTesi.iobj  SdlGameTesi.ipdb  StaticBody.nativecodeanalysis.sarif  StaticBody.nativecodeanalysis.xml  TextureManager.nativecodeanalysis.sarif  Vector2.nativecodeanalysis.sarif  World.nativecodeanalysis.sarif  World.nativecodeanalysis.xml  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
x64/Release/SdlGameTesi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
